--- a/app/_styles/global.scss
+++ b/app/_styles/global.scss
@@ -4,6 +4,7 @@
 // bootstrap
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~bootstrap-daterangepicker/daterangepicker.css";
+@import "~react-toastify/dist/ReactToastify.css";
 
 // mixin
 @import "_mixins.scss";
