--- a/app/_components/global/header/header-profile/profile.module.scss
+++ b/app/_components/global/header/header-profile/profile.module.scss
@@ -1,13 +1,35 @@
 .header_profile {
-    margin-left: 14px;
+    margin-left: clamp(0rem, -0.125rem + 0.625vw, 0.625rem);
+
     .profile {
+        padding: 8px 14px 10px 14px;
+        border-radius: 5px;
+        transition: 0.3s;
+        cursor: pointer;
+
+        &:hover {
+            background: rgba(255, 255, 255, 0.1);
+        }
+
+        @media (width < 992px) {
+            padding: 0px;
+
+            &:hover {
+                background: unset;
+            }
+        }
+
         .user_image {
-            height: 35px;
-            width: 35px;
+            height: clamp(2rem, 1.9625rem + 0.1875vw, 2.1875rem);
+            width: clamp(2rem, 1.9625rem + 0.1875vw, 2.1875rem);
             border-radius: 100px;
             border: 2px solid $white_color;
             margin-right: 10px;
             position: relative;
+
+            @media (width < 575px) {
+                margin-right: 8px;
+            }
 
             img {
                 border-radius: 100%;
