--- a/app/event-management/view-event-details/view-event-details-table/view-event-details-table.module.scss
+++ b/app/event-management/view-event-details/view-event-details-table/view-event-details-table.module.scss
@@ -31,8 +31,8 @@
 
 .pagination_wp {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
-    margin-top: 60px;
-    padding: 26px 30px;
+    margin-top: clamp(1.25rem, 0.75rem + 2.5vw, 3.75rem);
+    padding: clamp(0.75rem, 0.575rem + 0.875vw, 1.625rem) clamp(0.75rem, 0.525rem + 1.125vw, 1.875rem);
 
     & > span {
         color: $primary_color;
