--- a/app/_components/global/ui/button/button.module.scss
+++ b/app/_components/global/ui/button/button.module.scss
@@ -20,34 +20,25 @@
     }
 
     &.btn_lg {
-        padding: 0px 24px;
-        min-height: 52px;
-
-        @media (max-width: 991px) {
-            padding: 0px 20px;
-            min-height: 46px;
-        }
+        padding: 0px clamp(1.75rem, 1.575rem + 0.875vw, 2.625rem);
+        min-height: clamp(2.875rem, 2.8rem + 0.375vw, 3.25rem);
     }
 
     &.btn_md {
-        padding: 0px 38px;
-        min-height: 40px;
+        padding: 0px clamp(1.5rem, 1.325rem + 0.875vw, 2.375rem);
+        min-height: clamp(2.25rem, 2.2rem + 0.25vw, 2.5rem);
         border-radius: 5px;
-
-        @media (max-width: 991px) {
-            padding: 0px 18px;
-            min-height: 37px;
-        }
     }
 
     &.btn_sm {
-        padding: 0px 25px 2px 25px;
+        padding: 0px clamp(1.25rem, 1.2rem + 0.25vw, 1.5rem);
+        padding-bottom: 2px;
         color: $white_color;
         font-family: var(--font-sarabun);
         font-size: $font_sm;
         font-style: normal;
         font-weight: 400;
-        min-height: 33px;
+        min-height: clamp(1.75rem, 1.6875rem + 0.3125vw, 2.0625rem);
     }
 
     &.btn_outline {
