--- a/app/_styles/_variables.scss
+++ b/app/_styles/_variables.scss
@@ -151,5 +151,5 @@ $font_sm: 14px;
 $font_md: 16px;
 
 // width
-$sidebar_width: clamp(16.25rem, 16rem + 1.25vw, 17.5rem);
+$sidebar_width: 280px;
 $dashboard_wp: calc(100% - $sidebar_width);
