--- a/app/event-management/view-event-details/view-event-details.module.scss
+++ b/app/event-management/view-event-details/view-event-details.module.scss
@@ -33,10 +33,15 @@
     }
 
     .map {
-        img {
+        iframe {
             width: 100%;
-            height: 112px;
-            object-fit: cover;
+            height: 200px;
+        }
+    }
+
+    .description textarea {
+        @media (width < 768px) {
+            height: 150px;
         }
     }
 }
