--- a/app/_styles/global.scss
+++ b/app/_styles/global.scss
@@ -159,14 +159,15 @@ table:not(.daterangepicker table) {
     inset: 0;
 
     img {
-        animation: rotate 3s infinite linear;
+        animation: scaleUp 0.8s ease-in-out infinite alternate;
     }
-    @keyframes rotate {
-        from {
-            transform: rotate(0deg);
+
+    @keyframes scaleUp {
+        0% {
+            transform: scale(1.2);
         }
-        to {
-            transform: rotate(360deg);
+        100% {
+            transform: scale(1.4);
         }
     }
 }
