--- a/app/event-management/manage-existing-events/table-pagination/table-pagination.module.scss
+++ b/app/event-management/manage-existing-events/table-pagination/table-pagination.module.scss
@@ -1,4 +1,4 @@
 .table_pagination {
-    padding: 14px 20px;
+    padding: clamp(0.75rem, 0.725rem + 0.125vw, 0.875rem) clamp(0.75rem, 0.65rem + 0.5vw, 1.25rem);
     color: $primary_color;
 }
